Add support for mockito-inline